<resources>
    <string name="app_name">MyTank</string>
    <string name="bnm_tanks">Tanks</string>
    <string name="bnm_more">More</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_up">LOGIN</string>
    <string name="without_registration_up">Without registration</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="register">Register</string>
    <string name="register_up">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_fish_tank">Add fish tank</string>
    <string name="add_your_fish_tank">Add your fish tank</string>
    <string name="aquarium_size_in_liters">Aquarium size (in liters)</string>
    <string name="aquarium_name">Aquarium name</string>
    <string name="save_aquarium">Save</string>
    <string name="set_up_date">Set up date</string>
    <string name="metrics_litre">%1$d Litre</string>
    <string name="title_activity_tank">TankActivity</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="do_you_want_to_delete_this_tank">Do you really want to delete this tank?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit_tank">Edit Tank</string>
    <string name="logout">Logout</string>
    <string name="fish_stock">Fish stock</string>
    <string name="images">Images</string>
    <string name="add_fish_stock">Add fish stock</string>
    <string name="add_an_item_to_your_tank">Add an item to your tank</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="insertion_date">Insertion date</string>
    <string name="do_you_want_to_remove_tank_item">Do you really want to remove this item?</string>
    <string name="type">Type</string>
    <string name="you_have_not_added_any_items_to_the_list_yet">You have not added any items to the list yet</string>
    <string name="bnm_alarms">Alarms</string>
    <string name="set_item_alarm">Set item alarm</string>
    <string name="time_of_the_day">Time of the day</string>
    <string name="only_every_second_week">Only every second week</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="add_item_alarm">Add item alarm</string>
    <string name="tank">Tank</string>
    <string name="tank_item">Tank item</string>
    <string name="notification_default_title">MyTank</string>
    <string name="notification_default_subtitle">It\'s time to care about your tank!</string>
    <string name="ab_alarms">Alarms</string>
    <string name="ab_tanks">Tanks</string>
    <string name="ab_more">More</string>
    <string name="ab_item_alarm">Item Alarm</string>
    <string name="ab_tank">Tank</string>
    <string name="ab_tank_item">Tank Item</string>
    <string name="no_tanks_added_yet">No tanks added yet</string>
    <string name="click_on_the_plus_at_the_bottom_right_to_add_a_new_aquarium">Click on the plus at the bottom right to add a new aquarium</string>
    <string name="no_tank_items_added_yet">No tank items added yet</string>
    <string name="no_alarm_added_yet">No alarm added yet</string>
    <string name="click_on_the_plus_at_the_bottom_right_to_add_an_alarm_for_your_aquarium">Click on the plus at the bottom right to add an alarm for your aquarium</string>
    <string name="click_on_the_plus_at_the_bottom_right_to_add_a_new_tank_item">Click on the plus at the bottom right ro add a new tank item</string>
    <string name="ab_login">Login</string>
    <string name="ab_register">Register</string>
    <string name="welcome_to_mytank"><b>Welcome to MyTank</b></string>
    <string name="mytank_is_a_simple_way">MyTank is a simple way to give your life a little more order. With MyTank you will never again neglect your aquarium or your fish.\n\nThis app is still in the middle of its initial phase. On this page you will later have many options to configure the app and your account.</string>
    <string name="login_anonymously_alert_warning">If you delete the app, or log out, you will irrevocably lose access to your app data!</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="send_reset_mail">Send reset mail</string>
    <string name="forgot_password">Forgot password</string>
    <string name="you_are_registered_successfully">You are registered successfully</string>
    <string name="is_an_account_with_this_email_really_existing">Unfortunately, this did not work. Is an account with your email address really existing?</string>
    <string name="password_reset_mail_sent">An email with the appropriate link was sent</string>
    <string name="form_error_day_input">Please select at least one day</string>
    <string name="form_error_alarm_name_input">Please enter a name for your alarm</string>
    <string name="form_error_alarm_tank_input">Please select a tank from the list</string>
    <string name="form_error_register_mail_input">Please enter a valid email</string>
    <string name="form_error_register_password_input">Please enter a strong password</string>
    <string name="form_error_tank_name_input">Please enter a name for the tank</string>
    <string name="form_error_tank_size_input">Your tank needs a size</string>
    <string name="form_error_set_up_date_input">Enter a correct set up date of your tank</string>
    <string name="form_error_tank_item_name_input">Please enter the name of your item</string>
    <string name="form_error_tank_item_quantity_input">You need at least one item</string>
    <string name="form_error_tank_item_type_input">Choose a type for your item</string>
    <string name="form_error_tank_item_insertion_date_input">Choose the date when you put the item into the aquarium</string>
    <string name="form_error_forgot_password_email_input">Please enter your email address</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="request_id_token">827726308689-vnt8d9hb6ort384ktc0n1n351n14uj72.apps.googleusercontent.com</string>
    <string name="edit_your_fish_tank">Edit your fish tank</string>
    <string name="title_activity_tank_item">TankItemActivity</string>
    <string name="edit_tank_item">Edit tank item</string>
    <string name="if_you_have_forgotten_your_password_you_can_request_a_password_reset_link_here">If you have forgotten your password, you can request a password reset link here.</string>
    <string name="change_brightness_state">Change brightness state</string>
    <string name="brightness_state">Brightness state</string>
    <string name="brightness_mode"><b>Brightness mode</b></string>
    <string name="authentication"><b>Authentication</b></string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="error_brightness_system_follow_under_android_q">Follow the system in Dark/Light Mode only works from Android 10. Switching back to Dark Mode.</string>
    <!-- Arrays -->
    <string-array name="brightness_state">
        <item>Dark</item>
        <item>Light</item>
        <item>System</item>
    </string-array>
        <string-array name="item_type">
        <item name="FISH">Fish</item>
        <item name="CRUSTACEAN">Crustacean</item>
        <item name="PLANT">Plant</item>
        <item name="SNAIL">Snail</item>
    </string-array>
    <string-array name="hour_selection">
        <item name="0">00:00 (12 am)</item>
        <item name="1">01:00 (1 am)</item>
        <item name="2">02:00 (2 am)</item>
        <item name="3">03:00 (3 am)</item>
        <item name="4">04:00 (4 am)</item>
        <item name="5">05:00 (5 am)</item>
        <item name="6">06:00 (6 am)</item>
        <item name="7">07:00 (7 am)</item>
        <item name="8">08:00 (8 am)</item>
        <item name="9">09:00 (9 am)</item>
        <item name="10">10:00 (10 am)</item>
        <item name="11">11:00 (11 am)</item>
        <item name="12">12:00 (12 pm)</item>
        <item name="13">13:00 (1 pm)</item>
        <item name="14">14:00 (2 pm)</item>
        <item name="15">15:00 (3 pm)</item>
        <item name="16">16:00 (4 pm)</item>
        <item name="17">17:00 (5 pm)</item>
        <item name="18">18:00 (6 pm)</item>
        <item name="19">19:00 (7 pm)</item>
        <item name="20">20:00 (8 pm)</item>
        <item name="21">21:00 (9 pm)</item>
        <item name="22">22:00 (10 pm)</item>
        <item name="23">23:00 (11 pm)</item>
    </string-array>
    <!-- Firebase Storage paths -->
    <string name="fb_storage_tanks">%1$s.jpg</string>
    <string name="fb_storage_tank_items">tank-items/%1$s.jpg</string>
</resources>